improved omnitrix control on mobile, fixing the screen movement, improved the image changing code, added preloader

--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    -webkit-tap-highlight-color: transparent;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
@@ -10,6 +11,7 @@
     --dark-grey: #262626;
     --light-grey: #3b3b3b;
     --og-frame: url("../assets/images/new-frame.png");
+    --inner-frames: url("../assets/images/frames.png");
     --base: url("../assets/images/base.png");
     --background-color: blueviolet;
 }
@@ -171,7 +173,7 @@ aside .menu li:hover {
     top: 4%;
 
     background-size: cover;
-    background-image: url("../assets/images/frames.png");
+    background-image: var(--inner-frames);
 
     border-radius: 50%;
     background-size: cover;
@@ -211,6 +213,24 @@ aside .menu li:hover {
 
 #omnitrix .green-btn.inactive {
     background-color: var(--red);
+}
+
+/* Omnitrix Frame and Base Settings */
+
+.no-base {
+    --base: none !important;
+}
+
+.inactive-frame:before {
+    --og-frame: url("../assets/images/new-frame-red.png") !important;
+}
+
+.transformed-frame:before {
+    --og-frame: url("../assets/images/frame.png") !important;
+}
+
+.inner-frame-selection {
+    background-image: url("../assets/images/frames-selection.png") !important;
 }
 
 /* Animations */
